--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- horizontal image and test -->
     <div class="card">
-        <div class="card-top">
+        <div class="card-top flex">
             <div class="card-img"></div>
             <div class="typo">
                 <div class="card-name">
@@ -17,10 +18,32 @@
                 <div class="card-content">by Kurt Wagner</div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer flex">
             <button class="btn1">Read</button>
             <button class="btn1">Bookmark</button>
-            <div class="icon-div">
+            <div class="icon-div flex">
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- basic -->
+    <div class="card basic-card flex">
+        <div class="card-top flex">
+            <div class="card-img basic-card-image-size"></div>
+            <div class="card-content-box">
+                <div class="card-name">
+                Our Changing Planet</div>
+                <div class="card-content">by Kurt Wagner</div>
+                <p class="card-content card-content-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aliquam.</p>
+            </div>
+        </div>
+        <div class="card-footer flex">
+            <button class="btn1">Read</button>
+            <button class="btn1">Bookmark</button>
+            <div class="icon-div flex">
             <div class="heart-div"></div>
             <div class="heart-div"></div>
             <div class="heart-div"></div>
