text over media

--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
         </div>
     </div>
 
+    <!-- text over media -->
+    <div class="card basic-card flex">
+        <div class="card-top flex">
+            <div class="card-img basic-card-image-size">
+                <div class="card-name color-white">Our Changing Planet</div>
+                <div class="card-content">by Kurt Wagner</div>
+            </div>
+            <div class="card-content-box">
+                <p class="card-content card-content-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aliquam.</p>
+            </div>
+        </div>
+        <div class="card-footer flex">
+            <button class="btn1">Read</button>
+            <button class="btn1">Bookmark</button>
+            <div class="icon-div flex">
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            </div>
+        </div>
+    </div>
     
 <script src="main.js">
 
