text over media completed

--- a/index.html
+++ b/index.html
@@ -90,13 +90,15 @@
     </div>
 
     <!-- text over media -->
-    <div class="card basic-card flex">
+    <div class="card TOM-card-size">
         <div class="card-top flex">
             <div class="card-img basic-card-image-size">
-                <div class="card-name color-white">Our Changing Planet</div>
-                <div class="card-content">by Kurt Wagner</div>
+                <div class="bottom">
+                    <div class="card-name color-white">Our Changing Planet</div>
+                    <div class="card-content">by Kurt Wagner</div>
+                </div>
             </div>
-            <div class="card-content-box">
+            <div>
                 <p class="card-content card-content-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aliquam.</p>
             </div>
         </div>
