--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <main class="flex">
     <!-- horizontal image and test -->
     <div class="card">
         <div class="card-top flex">
@@ -112,7 +113,31 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- header card  -->
+    <div class="card header-card">
+        <div class="card-top flex">
+            <div class="bg-white">
+                <div class="card-name ">Our Changing Planet</div>
+                <div class="card-content">by Kurt Wagner</div>
+            </div>
+            <div class="card-img basic-card-image-size border">
+            </div>
+            <div>
+                <p class="card-content card-content-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aliquam.</p>
+            </div>
+        </div>
+        <div class="card-footer flex">
+            <button class="btn1">Read</button>
+            <button class="btn1">Bookmark</button>
+            <div class="icon-div flex">
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            <div class="heart-div"></div>
+            </div>
+        </div>
+    </div>
+    </main>
 <script src="main.js">
 
 </script>
