drawer without icons

--- a/drawer/index.html
+++ b/drawer/index.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
+    <main class="flex">
+        <div class="drawer">
+            <div class="drawer-head">
+                <h1 class="heading">Title</h1>
+                <div class="subtitle">subtext</div>
+            </div>
+            <div class="drawer-content flex">
+                    <a href="#" class="drawer-list-items flex">
+                       <div class="icons"></div> Indox
+                    </a>
+                    <a href="#" class="drawer-list-items flex">
+                        <div class="icons"></div> Star
+                    </a>
+                    <a href="#" class="drawer-list-items flex">
+                        <div class="icons"></div> Sent Mail
+                    </a>
+                    <a href="#" class="drawer-list-items flex">
+                        <div class="icons"></div> Draft
+                </nav>
+            </div>
+        </div>
+        
+    </main>
     
 </body>
 </html>
