drawer with icons

--- a/drawer/index.html
+++ b/drawer/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/86189ed851.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,16 +17,18 @@
             </div>
             <div class="drawer-content flex">
                     <a href="#" class="drawer-list-items flex">
-                       <div class="icons"></div> Indox
+                        <i class="icons fas fa-inbox"  style="user-select: auto;"></i>
+                        Indox
                     </a>
                     <a href="#" class="drawer-list-items flex">
-                        <div class="icons"></div> Star
+                        <i class="fas fa-star icons"></i> Star
                     </a>
                     <a href="#" class="drawer-list-items flex">
-                        <div class="icons"></div> Sent Mail
+                        <i class="fas fa-paper-plane icons"></i> Sent Mail
                     </a>
                     <a href="#" class="drawer-list-items flex">
-                        <div class="icons"></div> Draft
+                        <i class="fas fa-envelope icons"></i> Draft
+                    </a>
                 </nav>
             </div>
         </div>
