fixed with only heading

--- a/tabs/index.html
+++ b/tabs/index.html
@@ -23,8 +23,8 @@
             </button>
         </div>
     </main>
-    <!-- fixed with only leading icons -->
 
+    <!-- fixed with only leading icons -->
     <main class="flex">
         <div class="tab flex">
             <button class="tab-button flex">
@@ -39,5 +39,16 @@
         </div>
     </main>
     
+    <!-- fixed with only title -->
+    <main class="flex">
+        <div class="tab flex">
+            <button class="tab-button flex"> Tab one
+            </button>
+            <button class="tab-button flex "> tab two
+            </button>
+            <button class="tab-button flex "> tab three
+            </button>
+        </div>
+    </main>
 </body>
 </html>
