fixed with icons on top

--- a/tabs/index.html
+++ b/tabs/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- fixed with leading icons -->
     <main class="flex">
-        <div class="tab flex">
+        <div class=" flex">
             <button class="tab-button flex">
                 <i class="far fa-clock icon"></i> Tab one
             </button>
@@ -26,7 +26,7 @@
 
     <!-- fixed with only leading icons -->
     <main class="flex">
-        <div class="tab flex">
+        <div class="flex">
             <button class="tab-button flex">
                 <i class="far fa-clock "></i>
             </button>
@@ -41,12 +41,27 @@
     
     <!-- fixed with only title -->
     <main class="flex">
-        <div class="tab flex">
+        <div class=" flex">
             <button class="tab-button flex"> Tab one
             </button>
             <button class="tab-button flex "> tab two
             </button>
             <button class="tab-button flex "> tab three
+            </button>
+        </div>
+    </main>
+
+    <!-- fixed with only title -->
+    <main class="flex">
+        <div class=" flex">
+            <button class="tab-button wrapflex">
+                <i class="far fa-clock "></i> Tab one
+            </button>
+            <button class="tab-button wrapflex ">
+                <i class="far fa-paper-plane "></i> tab two
+            </button>
+            <button class="tab-button wrapflex ">
+                <i class="fas fa-heart " style="user-select: auto;"></i> tab three
             </button>
         </div>
     </main>
