--- a/tabs/index.html
+++ b/tabs/index.html
@@ -51,7 +51,7 @@
         </div>
     </main>
 
-    <!-- fixed with only title -->
+    <!-- fixed with icon on top -->
     <main class="flex">
         <div class=" flex">
             <button class="tab-button wrapflex">
