scrollable with leading icons and without icons tabs

--- a/tabs/index.html
+++ b/tabs/index.html
@@ -65,5 +65,49 @@
             </button>
         </div>
     </main>
+
+    <!-- scrollable with leading icons -->
+    <main class="flex">
+        <div class="tab flex">
+            <button class="tab-button flex  bg">
+                <i class="far fa-clock icon"></i> 
+                Tab one
+            </button>
+            <button class="tab-button flex bg">
+                <i class="far fa-paper-plane icon"></i> tab two
+            </button>
+            <button class="tab-button flex  bg">
+                <i class="fas fa-heart icon" style="user-select: auto;"></i> tab three
+            </button>
+            <button class="tab-button flex bg">
+                <i class="far fa-clock icon"></i> Tab four
+            </button>
+            <button class="tab-button flex  bg">
+                <i class="far fa-paper-plane icon"></i> tab five
+            </button>
+            <button class="tab-button flex  bg">
+                <i class="fas fa-heart icon" style="user-select: auto;"></i> tab six
+            </button>
+        </div>
+    </main>
+
+    <!-- scrollable without icons  -->
+    <main class="flex">
+        <div class="tab flex">
+            <button class="tab-button flex  bg">
+                Tab one
+            </button>
+            <button class="tab-button flex bg">tab two
+            </button>
+            <button class="tab-button flex  bg"> tab three
+            </button>
+            <button class="tab-button flex bg"> Tab four
+            </button>
+            <button class="tab-button flex  bg"> tab five
+            </button>
+            <button class="tab-button flex  bg"> tab six
+            </button>
+        </div>
+    </main>
 </body>
 </html>
