scrollable with icons on top tab

--- a/tabs/index.html
+++ b/tabs/index.html
@@ -94,20 +94,40 @@
     <!-- scrollable without icons  -->
     <main class="flex">
         <div class="tab flex">
-            <button class="tab-button flex  bg">
+            <button class="tab-button flex  bg">Tab one</button>
+            <button class="tab-button flex bg">tab two</button>
+            <button class="tab-button flex  bg"> tab three</button>
+            <button class="tab-button flex bg"> Tab four</button>
+            <button class="tab-button flex  bg"> tab five</button>
+            <button class="tab-button flex  bg"> tab six</button>
+        </div>
+    </main>
+
+    <!-- scrollable with icons on top -->
+    <main class="flex">
+        <div class="tab flex">
+            <button class="tab-button wrapflex  bg">
+                <i class="far fa-clock "></i> 
                 Tab one
             </button>
-            <button class="tab-button flex bg">tab two
+            <button class="tab-button wrapflex bg">
+                <i class="far fa-paper-plane"></i> tab two
             </button>
-            <button class="tab-button flex  bg"> tab three
+            <button class="tab-button wrapflex bg">
+                <i class="fas fa-heart" style="user-select: auto;"></i> tab three
             </button>
-            <button class="tab-button flex bg"> Tab four
+            <button class="tab-button wrapflex bg">
+                <i class="far fa-clock"></i> Tab four
             </button>
-            <button class="tab-button flex  bg"> tab five
+            <button class="tab-button wrapflex  bg">
+                <i class="far fa-paper-plane"></i> tab five
             </button>
-            <button class="tab-button flex  bg"> tab six
+            <button class="tab-button wrapflex bg">
+                <i class="fas fa-heart" style="user-select: auto;"></i> tab six
             </button>
         </div>
     </main>
+
+    
 </body>
 </html>
