--- a/tabs/index.html
+++ b/tabs/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- fixed with leading icons -->
     <main class="flex">
-        <div class=" flex">
+        <!-- fixed with leading icons -->
+        <div class=" tabs flex">
             <button class="tab-button flex">
                 <i class="far fa-clock icon"></i> Tab one
             </button>
@@ -22,11 +22,9 @@
                 <i class="fas fa-heart icon" style="user-select: auto;"></i> tab three
             </button>
         </div>
-    </main>
-
-    <!-- fixed with only leading icons -->
-    <main class="flex">
-        <div class="flex">
+        
+        <!-- fixed with only leading icons -->
+        <div class=" tabs flex">
             <button class="tab-button flex">
                 <i class="far fa-clock "></i>
             </button>
@@ -37,11 +35,8 @@
                 <i class="fas fa-heart " style="user-select: auto;"></i> 
             </button>
         </div>
-    </main>
-    
-    <!-- fixed with only title -->
-    <main class="flex">
-        <div class=" flex">
+        <!-- fixed with only title -->
+        <div class=" tabs flex">
             <button class="tab-button flex"> Tab one
             </button>
             <button class="tab-button flex "> tab two
@@ -49,11 +44,8 @@
             <button class="tab-button flex "> tab three
             </button>
         </div>
-    </main>
-
-    <!-- fixed with icon on top -->
-    <main class="flex">
-        <div class=" flex">
+        <!-- fixed with icon on top -->
+        <div class="tabs flex">
             <button class="tab-button wrapflex">
                 <i class="far fa-clock "></i> Tab one
             </button>
@@ -64,9 +56,9 @@
                 <i class="fas fa-heart " style="user-select: auto;"></i> tab three
             </button>
         </div>
-    </main>
-
-    <!-- scrollable with leading icons -->
+ </main>
+ 
+ <!-- scrollable with leading icons -->
     <main class="flex">
         <div class="tab flex">
             <button class="tab-button flex  bg">
