--- a/badge/index.html
+++ b/badge/index.html
@@ -24,7 +24,9 @@
     <div class="text-badge ">
         Button toggles badge visibility
         <button class="hide-btn ">Hide</button>
-            <div class="badge">7</div>
+            <div class="badge badge1">7</div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
